--- a/sdk/eventhubs/azure_messaging_eventhubs/Cargo.toml
+++ b/sdk/eventhubs/azure_messaging_eventhubs/Cargo.toml
@@ -26,6 +26,7 @@ futures.workspace = true
 rand.workspace = true
 rand_chacha.workspace = true
 tracing.workspace = true
+typespec_client_core = { workspace = true }
 
 [build-dependencies]
 rustc_version.workspace = true
