Update ci.yml files with release parameters

--- a/sdk/core/ci.yml
+++ b/sdk/core/ci.yml
@@ -10,6 +10,24 @@ trigger:
     include:
     - sdk/core/
 
+parameters:
+- name: release_azurecore
+  displayName: 'azure_core'
+  type: boolean
+  default: true
+- name: release_azurecoremacros
+  displayName: 'azure_core_macros'
+  type: boolean
+  default: true
+- name: release_azurecoreamqp
+  displayName: 'azure_core_amqp'
+  type: boolean
+  default: true
+- name: release_azurecoreopentelemetry
+  displayName: 'azure_core_opentelemetry'
+  type: boolean
+  default: true
+
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
@@ -17,9 +35,13 @@ extends:
     Artifacts:
     - name: azure_core
       safeName: AzureCore
+      releaseInBatch: ${{ parameters.release_azurecore }}
     - name: azure_core_macros
       safeName: AzureCoreMacros
+      releaseInBatch: ${{ parameters.release_azurecoremacros }}
     - name: azure_core_amqp
       safeName: AzureCoreAmqp
+      releaseInBatch: ${{ parameters.release_azurecoreamqp }}
     - name: azure_core_opentelemetry
       safeName: AzureCoreOpentelemetry
+      releaseInBatch: ${{ parameters.release_azurecoreopentelemetry }}
