--- a/sdk/eventhubs/ci.yml
+++ b/sdk/eventhubs/ci.yml
@@ -10,6 +10,16 @@ trigger:
     include:
     - sdk/eventhubs/
 
+parameters:
+- name: release_azuremessagingeventhubs
+  displayName: 'azure_messaging_eventhubs'
+  type: boolean
+  default: true
+- name: release_azuremessagingeventhubscheckpointstoreblob
+  displayName: 'azure_messaging_eventhubs_checkpointstore_blob'
+  type: boolean
+  default: true
+
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
@@ -17,5 +27,7 @@ extends:
     Artifacts:
     - name: azure_messaging_eventhubs
       safeName: AzureMessagingEventHubs
+      releaseInBatch: ${{ parameters.release_azuremessagingeventhubs }}
     - name: azure_messaging_eventhubs_checkpointstore_blob
       safeName: AzureMessagingEventHubsBlobCheckpointStore
+      releaseInBatch: ${{ parameters.release_azuremessagingeventhubscheckpointstoreblob }}
