--- a/sdk/typespec/ci.yml
+++ b/sdk/typespec/ci.yml
@@ -10,6 +10,20 @@ trigger:
     include:
     - sdk/typespec/
 
+parameters:
+- name: release_typespec
+  displayName: 'typespec'
+  type: boolean
+  default: true
+- name: release_typespecmacros
+  displayName: 'typespec_macros'
+  type: boolean
+  default: true
+- name: release_typespecclientcore
+  displayName: 'typespec_client_core'
+  type: boolean
+  default: true
+
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
@@ -17,7 +31,10 @@ extends:
     Artifacts:
     - name: typespec
       safeName: Typespec
+      releaseInBatch: ${{ parameters.release_typespec }}
     - name: typespec_macros
       safeName: TypespecMacros
+      releaseInBatch: ${{ parameters.release_typespecmacros }}
     - name: typespec_client_core
       safeName: TypespecClientCore
+      releaseInBatch: ${{ parameters.release_typespecclientcore }}
