Removed `create_enum` and `create_extensible_enum` macros (#3056)
Fixes #1846 

Also update to the 0.23.2 emitter which removes the requirement for
those macros.
Also: Added a convenience script to regenerate the generated clients for
all packages which have a `tsp-location.yaml` file.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,5 @@
+# cspell:ignore rustdoc
+
 [workspace]
 resolver = "2"
 members = [
@@ -156,3 +158,6 @@ uninlined_format_args = "allow"
 
 [workspace.lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }
+
+[workspace.lints.rustdoc]
+bare_urls = "allow"
