--- a/sdk/storage/ci.yml
+++ b/sdk/storage/ci.yml
@@ -34,9 +34,12 @@ extends:
     RunLiveTests: ${{ or(parameters.RunLiveTests, eq(variables['Build.Reason'], 'Schedule')) }}
     TestTimeoutInMinutes: 120
     Artifacts:
-    - name: azure_storage_common
-      releaseInBatch: ${{ parameters.release_azure_storage_common }}
+    # Artifact order in this file maps to order evaluated by Pack-Crates.ps1
+    # When the artifacts like blob and queue depend on common, common will need
+    # to be listed first.
     - name: azure_storage_blob
       releaseInBatch: ${{ parameters.release_azure_storage_blob }}
+    - name: azure_storage_common
+      releaseInBatch: ${{ parameters.release_azure_storage_common }}
     - name: azure_storage_queue
       releaseInBatch: ${{ parameters.release_azure_storage_queue }}
