--- a/Cargo.toml
+++ b/Cargo.toml
@@ -109,6 +109,7 @@ getrandom = { version = "0.3" }
 gloo-timers = { version = "0.3" }
 hmac = { version = "0.12" }
 litemap = "0.7.4"
+native-tls = "0.2"
 openssl = { version = "0.10.72" }
 opentelemetry = { version = "0.30", features = ["trace"] }
 opentelemetry_sdk = "0.30"
@@ -143,6 +144,8 @@ tokio = { version = "1.0", default-features = false, features = [
   "macros",
   "time",
 ] }
+tokio-native-tls = "0.3"
+tokio-socks = "0.5"
 tracing = "0.1.40"
 tracing-subscriber = "0.3"
 url = "2.2"
