--- a/sdk/core/azure_core_amqp/Cargo.toml
+++ b/sdk/core/azure_core_amqp/Cargo.toml
@@ -59,4 +59,4 @@ socks5 = ["dep:tokio-socks", "dep:native-tls", "dep:tokio-native-tls"]
 workspace = true
 
 [package.metadata.docs.rs]
-features = ["fe2o3_amqp"]
+features = ["fe2o3_amqp", "socks5"]
