--- a/sdk/cosmos/azure_data_cosmos/Cargo.toml
+++ b/sdk/cosmos/azure_data_cosmos/Cargo.toml
@@ -17,11 +17,13 @@ categories = ["api-bindings"]
 async-trait.workspace = true
 azure_core.workspace = true
 futures.workspace = true
+pin-project.workspace = true
 serde_json.workspace = true
 serde.workspace = true
 tracing.workspace = true
 typespec_client_core = { workspace = true, features = ["derive"] }
 url.workspace = true
+moka = { version = "0.12.11", features = ["future"] }
 
 [dev-dependencies]
 azure_identity.workspace = true
