--- a/sdk/cosmos/azure_data_cosmos_native/Cargo.toml
+++ b/sdk/cosmos/azure_data_cosmos_native/Cargo.toml
@@ -17,7 +17,7 @@ crate-type = ["cdylib", "staticlib"]
 azure_data_cosmos = { path = "../azure_data_cosmos", features = ["c"] }
 
 [build-dependencies]
-cbindgen.workspace = true
+cbindgen = "0.29.0"
 
 [lints]
 workspace = true
