--- a/sdk/cosmos/azure_data_cosmos_native/CMakeLists.txt
+++ b/sdk/cosmos/azure_data_cosmos_native/CMakeLists.txt
@@ -27,7 +27,7 @@ set(TEST_FILES
 foreach(test_file ${TEST_FILES})
     get_filename_component(test_name ${test_file} NAME_WE)
     add_executable(${test_name} ${test_file})
-    target_link_libraries(${test_name} PRIVATE cosmosclient)
+    target_link_libraries(${test_name} PRIVATE azurecosmos)
     add_test(${test_name} ${test_name})
 endforeach()
 
