--- a/sdk/cosmos/azure_data_cosmos_native/Cargo.toml
+++ b/sdk/cosmos/azure_data_cosmos_native/Cargo.toml
@@ -14,7 +14,7 @@ name = "azurecosmos"
 crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
-azure_data_cosmos = { path = "../azure_data_cosmos", features = ["ffi"] }
+azure_data_cosmos = { path = "../azure_data_cosmos" }
 
 [build-dependencies]
 cbindgen = "0.29.0"
