--- a/sdk/keyvault/azure_security_keyvault_secrets/Cargo.toml
+++ b/sdk/keyvault/azure_security_keyvault_secrets/Cargo.toml
@@ -40,3 +40,8 @@ rustc_version.workspace = true
 
 [lints]
 workspace = true
+
+[[test]]
+name = "performance_tests"
+path = "perf/get_secret.rs"
+harness = false
