--- a/eng/pipelines/templates/jobs/pack.yml
+++ b/eng/pipelines/templates/jobs/pack.yml
@@ -97,6 +97,7 @@ jobs:
           -OutputPath '$(Build.ArtifactStagingDirectory)'
           -PackageNames $(PackageNames)
           -RequireDependencies:$$(RequireDependencies)
+          -OutBuildOrderFile '$(Build.ArtifactStagingDirectory)/release-order.json'
 
   # TODO: Ensure APIView works given a change to the crates output folder structure
   - template: /eng/common/pipelines/templates/steps/publish-1es-artifact.yml
