--- a/sdk/storage/ci.yml
+++ b/sdk/storage/ci.yml
@@ -1,10 +1,4 @@
 # NOTE: Please refer to https://aka.ms/azsdk/engsys/ci-yaml before editing this file.
-parameters:
-- name: RunLiveTests
-  displayName: 'Run live tests'
-  type: boolean
-  default: false
-
 trigger:
   branches:
     include:
@@ -15,6 +9,24 @@ trigger:
     include:
     - sdk/storage/
 
+parameters:
+- name: RunLiveTests
+  displayName: 'Run live tests'
+  type: boolean
+  default: false
+- name: release_azure_storage_common
+  displayName: 'azure_storage_common'
+  type: boolean
+  default: true
+- name: release_azure_storage_blob
+  displayName: 'azure_storage_blob'
+  type: boolean
+  default: true
+- name: release_azure_storage_queue
+  displayName: 'azure_storage_queue'
+  type: boolean
+  default: true
+
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
@@ -22,9 +34,12 @@ extends:
     RunLiveTests: ${{ or(parameters.RunLiveTests, eq(variables['Build.Reason'], 'Schedule')) }}
     TestTimeoutInMinutes: 120
     Artifacts:
-    - name: azure_storage_common
-      safeName: AzureStorageCommon
+    # Artifact order in this file maps to order evaluated by Pack-Crates.ps1
+    # When the artifacts like blob and queue depend on common, common will need
+    # to be listed first.
     - name: azure_storage_blob
-      safeName: AzureStorageBlob
+      releaseInBatch: ${{ parameters.release_azure_storage_blob }}
+    - name: azure_storage_common
+      releaseInBatch: ${{ parameters.release_azure_storage_common }}
     - name: azure_storage_queue
-      safeName: AzureStorageQueue
+      releaseInBatch: ${{ parameters.release_azure_storage_queue }}
