--- a/sdk/identity/ci.yml
+++ b/sdk/identity/ci.yml
@@ -3,12 +3,18 @@
 trigger:
   branches:
     include:
-      - main
-      - hotfix/*
-      - release/*
+    - main
+    - hotfix/*
+    - release/*
   paths:
     include:
-      - sdk/identity/
+    - sdk/identity/
+
+parameters:
+- name: release_azure_identity
+  displayName: 'azure_identity'
+  type: boolean
+  default: true
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
@@ -16,7 +22,7 @@ extends:
     ServiceDirectory: identity
     Artifacts:
       - name: azure_identity
-        safeName: AzureIdentity
+        releaseInBatch: ${{ parameters.release_azure_identity }}
 
     ${{ if endsWith(variables['Build.DefinitionName'], 'weekly') }}:
       Location: uksouth
