--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -19,10 +19,10 @@
 
 # Catch all for loose files in the root, which are mostly global configuration and
 # should not be changed without team discussion.
-/*                       @heaths @RickWinter @ronniegeraghty @LarryOsterman @j7nw4r
+/*                       @heaths @RickWinter @ronniegeraghty @LarryOsterman
 
 # Catch all for non-code project files and unowned files | folders
-/**                      @heaths @RickWinter @ronniegeraghty @LarryOsterman @j7nw4r
+/**                      @heaths @RickWinter @ronniegeraghty @LarryOsterman
 
 # Allow service owners to approve crate version updates, which impact Cargo.lock
 /Cargo.lock
@@ -32,23 +32,23 @@
 ##################
 
 # GitHub integration and bot rules
-/.github/                @heaths @RickWinter @ronniegeraghty @LarryOsterman @j7nw4r
+/.github/                @heaths @RickWinter @ronniegeraghty @LarryOsterman
 
 ###########
 # SDK
 ###########
 # Catch all
-/sdk/                    @heaths @RickWinter @ronniegeraghty @LarryOsterman @j7nw4r
+/sdk/                    @heaths @RickWinter @ronniegeraghty @LarryOsterman
 
 # AzureSDKOwners: @heaths
 # ServiceLabel: %Azure.Core
 # PRLabel: %Azure.Core
-/sdk/core/               @heaths @RickWinter @LarryOsterman @j7nw4r
+/sdk/core/               @heaths @RickWinter @LarryOsterman
 
 # AzureSDKOwners: @heaths
 # ServiceLabel: %Azure.Identity
 # PRLabel: %Azure.Identity
-/sdk/identity/           @heaths @RickWinter @LarryOsterman @chlowell @j7nw4r
+/sdk/identity/           @heaths @RickWinter @LarryOsterman @chlowell
 
 ####################
 # Client Libraries
@@ -73,10 +73,10 @@
 # ServiceLabel: %Storage
 # AzureSDKOwners: @vincenttran-msft @jalauzon-msft
 
-# PRLabel: %EventHubs
+# PRLabel: %Event Hubs
 /sdk/eventhubs/          @j7nw4r
 
-# ServiceLabel: %EventHubs
+# ServiceLabel: %Event Hubs
 # AzureSDKOwners: @j7nw4r
 
 ####################
